[tool.poetry]
name = "pathflow"
version = "0.1.0"
description = ""
authors = ["Krishna Shah <kshahusa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.3"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
